--- a/client/index.html
+++ b/client/index.html
@@ -96,6 +96,7 @@
                     <div class="login-btn" id="loginBtn">
                         Log In
                     </div>
+                    
                    <div class="line-cont">
                     <div class="or-line">
                         <div class="line"></div>
@@ -109,6 +110,7 @@
                                 <i class="fa fa-facebook"></i> Log in with Facebook
                             </div>
                         </a>
+                        <div class="errMsg" id='errorMsg'></div>
                         <div class="forgot">
                             <a href="#">Forgot password?</a>
                         </div>
