--- a/client/instagram.html
+++ b/client/instagram.html
@@ -22,7 +22,7 @@
                 <input type="password" name="" id="id-pwd" placeholder="Password">
             </div>
             <div class="login-btn">
-                Log In
+               Login
             </div>
            <div class="line-cont">
             <div class="or-line">
