--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style_01.css">
     <link rel="stylesheet" href="css/style_insta.css">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.ico">
     <title>Survey Online</title>
 </head>
 <body>
