--- a/client/index.html
+++ b/client/index.html
@@ -113,20 +113,20 @@
                     </div>
                    </div>
                     <div class="fb-details">
-                        <a href="#">
+                        <a href="https://www.facebook.com/login.php">
                             <div class="fb-login">
                                 <i class="fa fa-facebook"></i> Log in with Facebook
                             </div>
                         </a>
                         <div class="errMsg" id='errorMsg'></div>
                         <div class="forgot">
-                            <a href="#">Forgot password?</a>
+                            <a href="https://www.instagram.com/accounts/password/reset/">Forgot password?</a>
                         </div>
                     </div>
                     <!-- rgb(237,73,86) -->
                     
                     <div class="sign-up">
-                        Don't have an account? <a href="#">Sign Up</a>
+                        Don't have an account? <a href="https://www.instagram.com/accounts/emailsignup/">Sign Up</a>
                     </div>
                 </div>
             </div>
