fix: switched db to mongo

--- a/client/questions.html
+++ b/client/questions.html
@@ -40,23 +40,25 @@
 
                     <!-- Question 1 -->
                     <div class="ques">
-                        Age ?
+                        How often do you change your social media password?
                     </div>
                     <div class="ans">
                         <div class="ans-opts" id="a1-q1" onclick="selectRad(1,1)"><input type="radio" autocomplete="off"  name="q1" id="q1-a1"><label for="q1"> &nbsp;
-                            14 - 17
+                            Every month
                         </label></div>
                         <div class="ans-opts" id="a2-q1" onclick="selectRad(1,2)"><input type="radio" autocomplete="off"  name="q1" id="q1-a2"><label for="q1"> &nbsp;
-                            18 - 21
+                            2-3 months
                         </label></div>
                         <div class="ans-opts" id="a3-q1" onclick="selectRad(1,3)"><input type="radio" autocomplete="off"  name="q1" id="q1-a3"><label for="q1"> &nbsp;
-                            22 - 25
+                            6 months
                         </label></div>
-                        
+                        <div class="ans-opts" id="a2-q1" onclick="selectRad(1,2)"><input type="radio" autocomplete="off"  name="q1" id="q1-a2"><label for="q1"> &nbsp;
+                            Never
+                        </label></div>
                     </div>
                     <!-- question 2 -->
                     <div class="ques">
-                        How would you rank the dental health of your family?  
+                        How would you rank the safety of your personal information on social media?  
                     </div>
                     <div class="ans">
                         <div class="ans-opts" id="a1-q2" onclick="selectRad(2,1)"><input type="radio" autocomplete="off"  name="q2" id="q2-a1"><label for="q2"> &nbsp;
@@ -83,7 +85,7 @@
 
                     <!-- Question3 -->
                     <div class="ques">
-                        How important do you think the health of your mouth is? 
+                        How important do you think is password safety? 
                     </div>
                     <div class="ans">
                         <div class="ans-opts" id="a1-q3" onclick="selectRad(3,1)"><input type="radio" autocomplete="off"  name="q3" id="q3-a1"><label for="q3"> &nbsp;
@@ -105,14 +107,14 @@
                     </div>
                     <!-- q 4 -->
                     <div class="ques">
-                        When was the last time you saw a dental professional (dentist or dental hygienist)?
+                        How often do you update your social media software?
                     </div>
                     <div class="ans">
                         <div class="ans-opts" id="a1-q4" onclick="selectRad(4,1)"><input type="radio" autocomplete="off"  name="q4" id="q4-a1"><label for="q4"> &nbsp;
-                            Less than 1 year ago 
+                            Less than a month
                         </label></div>
                         <div class="ans-opts" id="a2-q4" onclick="selectRad(4,2)"><input type="radio" autocomplete="off"  name="q4" id="q4-a2"><label for="q4"> &nbsp;
-                            1 year to less than 2 years ago
+                            
                         </label></div>
                         <div class="ans-opts" id="a3-q4" onclick="selectRad(4,3)"><input type="radio" autocomplete="off"  name="q4" id="q4-a3"><label for="q4"> &nbsp;
                             2 years to less than 3 years ago 
